# icon-forger

./: .gitignore  Cargo.toml  build.sh  netlify.toml
src/: codegen.rs  export.rs  import.rs  lib.rs  shapes.rs
web/: app.js  index.html  style.css
