[package]
name = "icon-forger"
version = "0.1.0"
edition = "2021"
description = "Parametric icon generator & SVG import pipeline → all platform formats"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Drawing & rasterization
tiny-skia = "0.11"
resvg = "0.42"
usvg = "0.42"
kurbo = "0.11"

# Image encoding & resize
image = "0.25"

# Platform icon formats
icns = "0.3"
ico = "0.3"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "FileReader",
    "Event",
    "console",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"

# Error handling
thiserror = "1"

[profile.release]
opt-level = "s"
lto = true
